Missing citations added

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -262,3 +262,25 @@ note = {(Accessed on 02/23/2019)}
   journal={Internet: https://github. com/ethereum/yellowpaper,[Oct. 30, 2018]},
   year={2014}
 }
+
+@article{danezis2015centrally,
+  title={Centrally banked cryptocurrencies},
+  author={Danezis, George and Meiklejohn, Sarah},
+  journal={arXiv preprint arXiv:1505.06895},
+  year={2015}
+}
+
+@inproceedings{carlsten2016instability,
+  title={On the instability of bitcoin without the block reward},
+  author={Carlsten, Miles and Kalodner, Harry and Weinberg, S Matthew and Narayanan, Arvind},
+  booktitle={Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
+  pages={154--167},
+  year={2016},
+  organization={ACM}
+}
+
+@article{griffin2018bitcoin,
+  title={Is bitcoin really un-tethered?},
+  author={Griffin, John M and Shams, Amin},
+  year={2018}
+}
