--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -208,7 +208,7 @@ The difference between the market value of a newly minted coin and the cost to p
 
 %If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a literal shitcoin out of the result --- is that coin worth \$100 because it is ``backed'' by \$100 worth of steak?
 
-Even if the market does not accept the psychology that a coin backed by \$1 USD should be priced at \$1 USD, it is still important to establish that the coin is actually backed as a guard against over-issuance. As in the previous section, holders of the coin will want assurance that the custodianship of the backing asset is sound. A financial audit by reputable firm is one method to provide this assurance. \textblue{Recap: Is bitcoin really un-tethered?}.
+Even if the market does not accept the psychology that a coin backed by \$1 USD should be priced at \$1 USD, it is still important to establish that the coin is actually backed as a guard against over-issuance. As in the previous section, holders of the coin will want assurance that the custodianship of the backing asset is sound. A financial audit by reputable firm is one method to provide this assurance. %\textblue{Recap: Is bitcoin really un-tethered?~\cite{griffin2018bitcoin}}.
 
 %Tether attacks.
 
@@ -296,7 +296,7 @@ Allowing a crypto-currency to expand is not difficult. Who benefits from the new
 
 \paragraph{Price Stability.} If many bids in excess of \$1.02 USD remain unexecuted, the currency inflates. In theory, holders of the currency should be more willing to spend it, including spending it on obtaining USD. If this follows, the best bids will be executed and the new best bid will be at a lower price. This process can continue until bids are again under \$1.02. This is a heuristic because there are no guarantee the receipients will spend the new currency (or spend it on USD, in particular if demand for USD is falling). The justification for asks below \$0.98 is symmetrical: the currency contractions will make holders less willing to spend it on USD which will stop bids from being replenished at lower prices. This logic also assumes a lot. If the price drop is caused by a lack of demand of AliceCoins (rather than an oversupply), then removing AliceCoins will decrease the number of asks---which means it will take less matching bids to move the spread toward \$1 USD but this is not the same as incentivizing traders to make matching bids. 
 
-\paragraph{Discussion.} When the coinbase is increased or decreased dynamically (sometimes called an elastic coinbase), it is apparent that there is no bound on how much the increase can be. It is less apparent what the bound is on a decrease. For example, if a block offers no coinbase (the zero bound), will miners still mine it? Recall that miners are still incentivized to mine the block because of fees provided in the transactions (In fact this is how Bitcoin will eventually function---how well is debatable~\cite{}). This is not inconsequential. If there are not sufficinet transactions with fees, blocks will stop being produced (whereas under a positive coinbase, empty blocks will still be produced on schedule). What about a negative coinbase? Obviously no miner will pay out to mine a block but since they are rewarded the sum of the coinbase and the transaction fees, a coinbase can indeed be negative and miners will mine such a block if the transaction fees are greater than the negative coinbase. Under this deployment, users paying fees to transact are effectively burning most of their transaction fee to contract the money supply. There is an actual zero bound on the amount the coinbase can go negative---the total supply of the currency---but a currency would become dysfunctional long before that bound is reached. 
+\paragraph{Discussion.} When the coinbase is increased or decreased dynamically (sometimes called an elastic coinbase), it is apparent that there is no bound on how much the increase can be. It is less apparent what the bound is on a decrease. For example, if a block offers no coinbase (the zero bound), will miners still mine it? Recall that miners are still incentivized to mine the block because of fees provided in the transactions (In fact this is how Bitcoin will eventually function---how well is debatable~\cite{carlsten2016instability}). This is not inconsequential. If there are not sufficinet transactions with fees, blocks will stop being produced (whereas under a positive coinbase, empty blocks will still be produced on schedule). What about a negative coinbase? Obviously no miner will pay out to mine a block but since they are rewarded the sum of the coinbase and the transaction fees, a coinbase can indeed be negative and miners will mine such a block if the transaction fees are greater than the negative coinbase. Under this deployment, users paying fees to transact are effectively burning most of their transaction fee to contract the money supply. There is an actual zero bound on the amount the coinbase can go negative---the total supply of the currency---but a currency would become dysfunctional long before that bound is reached.
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 % Jeremy: Putting summary chart here so the spacing is better
