add some details

--- a/latex-conf/sections/eval.tex
+++ b/latex-conf/sections/eval.tex
@@ -8,9 +8,9 @@
 &
 \headrow{Corrects undervaluation} &
 \headrow{Corrects overvaluation} &
-\headrow{Decentralized issuance } &
-\headrow{Decentralized redemption} &
-\headrow{Decentralized transfer} &
+\headrow{Decentralizes issuance } &
+\headrow{Decentralizes redemption} &
+\headrow{Decentralizes transfer} &
 \headrow{No trusted oracle} \\
 \hline
 
@@ -31,6 +31,6 @@
 	\hline
 
 	\end{tabular}
-	\caption{Comparative evaluation of mechanisms to design stablecoins: {\full} indicates the properties (columns) are fulfilled by the corresponding mechanism (rows) within reason, {\prt} means the property is fulfilled but the fulfillment is bounded, {?} indicates a heuristic has been proposed for stability and the conditions under which it will work are not well-established enough to rank, and $\times$ indicates the property is not applicable.
+	\caption{Comparative evaluation of mechanisms to design stablecoins: {\full} indicates the properties (columns) are fulfilled by the corresponding mechanism (rows) within reason, {\prt} means the property is fulfilled but the fulfillment is bounded, {?} indicates a heuristic has been proposed for stability and the conditions under which it will work are not well-established enough to evaluate, and $\times$ indicates the property is not applicable.
 	\label{tab:evframework}}
 \end{table}
