--- a/latex-conf/sections/stablecoin.tex
+++ b/latex-conf/sections/stablecoin.tex
@@ -17,12 +17,12 @@ From the inception of exchanges for buying and selling BTC for USD in 2010 to th
 
 In response to Bitcoin's extreme volatility, a flood of proposals have been made for alternative designs that would offer a more stable exchange rate (called `stablecoins') between such a proposed stablecoin and a government-issued currency like the USD. Broadly, the proposals can be split into two categories: ones that essentially create a digital representation of a fiat currency that can be transacted like a cryptocurrency, and ones that propose separate currencies with some mechanisms for stability and/or intervention built into the design.
 
-\paragraph{Contributions.} This paper is essentially a survey of work on stablecoins but we aim at making a number of subtle research contributions to ensure this survey is useful to the reader. First and foremost, we are very selective in the concepts from finance we bring into the survey and explain each from first principles, while attempting to minimize or eliminate jargon. Next, we distill stablecoin proposals down to a set of fundamental primitives and describe how these concepts work, as opposed to enumerating the intricate details of how a particular `brand' of stablecoins works today---details that could change tomorrow. We do provide, as the reader probably expects, a chart mapping existing stablecoin brands into our categorization. Additionally, we also consider the question and potential for the stability of index-cryptocurrencies (namely gas which is used in Ethereum), which are very pertinent to a discussion of stablecoins, yet not typically addressed. Last, we offer a novel visualization style for exchange rates we have not seen before used for exchange rates.
+\paragraph{Contributions.} This paper is a systemization of work on stablecoins but we aim at making a number of subtle research contributions to ensure it is useful to the reader. First and foremost, we are very selective in the concepts from finance we bring into the survey and explain each from first principles, while attempting to minimize or eliminate jargon. Next, we distill stablecoin proposals down to a set of fundamental primitives and describe how these concepts work, as opposed to enumerating the intricate details of how a particular `brand' of stablecoin works today---details that could change tomorrow. We do provide, as the reader probably expects, a chart mapping existing stablecoin brands into our categorization. Additionally, we also consider the potential for the stability of index-cryptocurrencies (namely gas which is used in Ethereum), which are very pertinent to a discussion of stablecoins, yet not typically addressed. Last, we offer a novel visualization style for exchange rates we have not seen before used for exchange rates.
 
 % Most of the coins are mostly focusing on the supporting infrastructure, maybe we also have to talk about the supporting infrastructure of the stablecoin
 
-
 %========================%
+
 \section{Related Work}
 \label{sec:lit}
 
@@ -78,8 +78,7 @@ To determine which currency is moving, one might consider a third or forth curre
 In order to apply this same logic in a visual way, we have created a number of charts like the one provided in Figure~\ref{fig:brexit}. Unlike most exchange rate graphs, these do not use a time axis. Instead each axis is a reference currency. In this case, the price of GBP (plotted value) in USD (x-axis) and EUR (y-axis) form a coordinate. For the last day of each month, a new coordinate is added and joined with a line from the previous value. This is inspired by similar charts on the website FiveThiryEight for things like kicking distance in football\footnote{``The 52 Best---And Weirdest---Charts We Made In 2016,'' \textit{FiveThirtyEight}, 30 Dec 2016.} and they have been called connected scatter plots.
 
 Lines in a connected scatter plot can move in any direction. Figure~\ref{fig:legend} shows how we number the directions from 1 (upward or due north) clockwise to 8 (north-west). For each direction, we describe the simplest interpretation of what that price direction means. By simplest, we mean specifically that we keep an explanation that involves a single currency moving rather than an explanation that involves a pair of currencies moving in tandem. For example, in Figure~\ref{fig:brexit}, GBP shows a drastic movement along direction 6 starting at the time period marked Brexit. This means that GBP is losing value against both EUR and USD. The simplest explanation is that the movements are originating from GBP which is consistent with it losing value after Brexit. Later, GBP shows a lot of horizontal movements along the 7/3 line. The simplest explanation for this segment is volatility in USD rather than GBP.
-A copy of the datasets and codes of all the charts can be found on our GitHub repository. \footnote{https://github.com/ Removed for anonymity.}
-
+A copy of the datasets and codes of all the charts can be found on our GitHub repository.\footnote{https://github.com/ Removed for anonymity.}
 
 We will return to these charts later in Section~\ref{sec:stability} where we will use a government currency as one reference (USD on the x-axis) and a cryptocurrency as the other reference (BTC on the y-axis). A stablecoin should exhibit mostly vertical movements along the 1/5 direction.
 
@@ -118,11 +117,6 @@ Lending a volatile currency poses a risk for both the cash provider and cash tak
 ``It is difficult to overstate the role of lending in a modern economy. Take, as an illustrative example, the role of a central bank; one of the main national institutes (along with the treasury) that cryptocurrencies aim to displace. First and foremost, a central bank is an actual bank, providing accounts for its member banks to deposit money and earn interest. Member banks provide interest-earning accounts to the public. Interest is paid to the public because banks use the deposited money to form loans. Because central bank interest rates are low, banks prefer to lend to other banks any excess cash they hold at day's end instead of depositing them (other banks borrow to meet liquidity requirements). These loans earn interest, and central banks target this specific lending rate when they intervene in the economy. The most common intervention is the buying (circulating new money) or selling (removing circulating money) of government bonds, which are interest-earning loans from investors to the government. Central banks will also provide loans (of `last resort') to banks unable to secure loans from other banks, typically during some sort of liquidity crisis. An economy without loans would have no interest rates, no bonds, and essentially nothing for a modern central bank to do.~\cite{okoyetoward}''
 
 \end{quote}
-
-
-
-
-
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
@@ -188,7 +182,7 @@ A variety of firms and projects providing stablecoins in this category exist. Wh
 \subsection{Directly-Backed}
 \label{sec:tether}
 
-Next we consider stablecoins that are directly-backed---exactly as in the previous section but they do not offer a redemption process for the coin's underlying assets. Redemption is logistically complicated. Consider a USD-backed dollar---it is usually easier for a firm to receive USD payments from users than it is for it to send payments back, and sending payments opens up new exposure to regulation. Instead the firms behind these coins  pledge to keep the backing assets in trust for the duration of the circulating coins. We will shortly explain what impact there is on the exchange rate if it does not provide redemption---obviously, if redemption was inconsequential than no one would offer it as it increases costs and complexity. For our ranking in Table~\ref{tab:stablecoins}, if we could not find a clear assertion of redemption, we listed the project under this category.
+Next we consider stablecoins that are directly-backed---exactly as in the previous section---but they do not offer a redemption process for the coin's underlying assets. Redemption is logistically complicated. Consider a USD-backed dollar---it is usually easier for a firm to receive USD payments from users than it is for it to send payments back, and sending payments opens up new exposure to regulation. Instead the firms behind these coins  pledge to keep the backing assets in trust for the duration of the circulating coins. We will shortly explain what impact there is on the exchange rate if it does not provide redemption---obviously, if redemption was inconsequential than no one would offer it as it increases costs and complexity. For our ranking in Table~\ref{tab:stablecoins}, if we could not find a clear assertion of redemption, we listed the project under this category.
 
 \paragraph{Process.} See Table~\ref{tab:mech}.
 
@@ -208,7 +202,11 @@ The difference between the market value of a newly minted coin and the cost to p
 
 %If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a literal shitcoin out of the result --- is that coin worth \$100 because it is ``backed'' by \$100 worth of steak?
 
-Even if the market does not accept the psychology that a coin backed by \$1 USD should be priced at \$1 USD, it is still important to establish that the coin is actually backed as a guard against over-issuance. As in the previous section, holders of the coin will want assurance that the custodianship of the backing asset is sound. A financial audit by reputable firm is one method to provide this assurance. %\textblue{Recap: Is bitcoin really un-tethered?~\cite{griffin2018bitcoin}}.
+Even if the market does not accept the psychology that a coin backed by \$1 USD should be priced at \$1 USD, it is still important to establish that the coin is actually backed as a guard against over-issuance (one example coin in this category is Tether which has been accused of issuing coins to manipulate markets~\cite{griffin2018bitcoin}). As in the previous section, holders of the coin will want assurance that the custodianship of the backing asset is sound. A financial audit by reputable firm is one method to provide this assurance.
+
+The most prominent use-case of stablecoins (not limited to unredeemable coins but demonstrated by Tether) is as a temporary store of value for speculation. Assume Alice moves Bitcoin onto an exchange, and sells it expecting to repurchase at a later time and lower price. She can sell it for USD and (1) hold the USD in her exchange account, which can be used to later repurchase Bitcoin but only on the same exchange. Alternatively, she can (2) withdrawal the USD from the exchange which gives her flexiblity with what she uses the USD for but this requires identity verification (in most jurisdictions), a bank that will accept proceeds of cryptocurrencies from the exchange, bank fees, and a substantial time delay. A balanced alternative is to (3) exchange BTC into a stablecoin which can be withdrawn from the exchange (\ie moved from the exchange to Alice's private key) with less friction, delay, and regulatory oversight. The stablecoin could be moved onto a different exchange or used for direct purchases, enabling more flexibility than money left in an exchange account (but less than holding actual USD).
+
+%\textblue{Recap: Is bitcoin really un-tethered?}.
 
 %Tether attacks.
 
@@ -236,7 +234,7 @@ Tokens are then created when the equivalent of \$1 USD in ETH is collected, and 
 
 \paragraph{Process.} See Table~\ref{tab:mech}.
 
-\paragraph{Price Stability.} Consider a bid for 1 AliceCoin that is greater than \$1 USD. Bob will sell an AliceCoin immediately for this price and will ask Alice to generate a new AliceCoin, pay her only \$1 USD for this, and keep the rest of the bid value as profit. (More generally, Bob could issue a BobCoin assuming the bid is for any coin backed by this type of contract). Therefore bids in excess of \$1 USD will be fulfilled as long as there are individuals willing to lock up a deposit of ETH that is 1.5x the face-value of what they receive. If there is a shortage of ETH for this purpose, AliceCoins might trade in excess of \$1 USD. It is important to note if Alice underwrites one of these contracts, retains the USD she sells the AliceCoin for, and the ETH/USD exchange rate changes, she will make or lose exactly the same amount of money as she would by simply holding the same amount of ETH she deposited. The exception is if the contract's deposit becomes worth less than the amount that can be redeemed from it --- in this case, Alice loses less money by underwriting the contract (the holder of the coin bears the loss) than if she held ETH.
+\paragraph{Price Stability.} Consider a bid for 1 AliceCoin that is greater than \$1 USD. Bob will sell an AliceCoin immediately for this price and will ask Alice to generate a new AliceCoin, pay her only \$1 USD for this, and keep the rest of the bid value as profit. (More generally, Bob could issue a BobCoin assuming the bid is for any coin backed by this type of contract). Therefore bids in excess of \$1 USD will be fulfilled as long as there are individuals willing to lock up a deposit of ETH that is 1.5x the face-value of what they receive. If there is a shortage of ETH for this purpose, AliceCoins might trade in excess of \$1 USD. If Alice holds underwrites one of these contracts (\ie holds the second place in line), the value of this position is more volatile than ETH itself (when ETH/USD increases, she makes more than if she held ETH, and when it decreases, she loses faster than if she held ETH). However Alice can construct a simple portfolio of the second place in line and the \$ 1 USD she sold the AliceCoin for, and she is perfectly hedged --- she will make or lose exactly the same amount of money as she would by simply holding the same amount of ETH she deposited. The exception is if the contract's deposit becomes worth less than the amount that can be redeemed from it --- in this case, Alice loses less money by underwriting the contract (the holder of the coin bears the loss) than if she held ETH. The takeaway is that there is no downside for Alice to create AliceCoins with her excess ETH to fulfil demand for AliceCoins. 
 
 % Case study?
 
@@ -246,7 +244,7 @@ Conclusion: Indirectly-backed coins will fulfill bids greater than \$1 USD assum
 
 \paragraph{Discussion.} In standard finance, brokerages will lend money to investors but are concerned about getting it back in the case that the investors lose their borrowed money. They generally will require a deposit from the investor, monitor the investor's profits and losses, and liquidate the investor's position if their losses approach the deposited amount (or ask the investor to deposit more). This is premised on the assumption that prices do not fall too quickly to react and that the position can be sold quickly at a good price. Therefore it is a precedented premise that an indirectly-backed stablecoin can be redeemed quickly before the deposit is worth less than the coins, however ETH may be far more volatile than other financial instruments.
 
-There are many design decisions to consider when deploying an indirectly-backed stablecoin: the ratio by which the initial deposit exceeds the redemption value (\eg 1.5x), if coins can be redeemed any time, if a third-party can trigger a redemption (\eg for a fee) if they notice a deposit is close to losing more value than the face value of the coins (before the coin holder does), how close the deposit can get to losing value before such a trigger, and if all deposits backing all such coins should be pooled together, so all coins are interchangeable (`fungible'), or each coin is tied to a specific deposit. Note that while allowing third parties to trigger a redemption seems like a sensible service, if the coin holders are not monitoring the situation, they will end up holding ETH, instead of an AliceCoin, which is still losing value. This mechanism is really only about maintaining the reputation of the stablecoin.
+There are many design decisions to consider when deploying an indirectly-backed stablecoin: the ratio by which the initial deposit exceeds the redemption value (\eg 1.5x), if coins can be redeemed any time, if a third-party can trigger a redemption (\eg for a fee) if they notice a deposit is close to losing more value than the face value of the coins (before the coin holder does), how close the deposit can get to losing value before such a trigger, and if all deposits backing all such coins should be pooled together, so all coins are interchangeable (`fungible'), or each coin is tied to a specific deposit. Note that while allowing third parties to trigger a redemption seems like a sensible service, if the coin holders are not monitoring the situation, they will end up holding ETH, instead of an AliceCoin, which is still losing value. Thus this mechanism does not protect holders of the stablecoin at all --- it is really only about maintaining the reputation of the stablecoin. The stablecoin can claim it has never broken its peg to the dollar but it is an illusion, because as soon as it is about to lose value, it turns back into its collateral and then loses values under the name of the collateral instead of the stablecoin. 
 
 If the contract holding the deposit is thought of as a financial instrument (and the stablecoin could enable it to be sold from Alice to Bob), it appears to be a novel configuration. It however has certain aspects in common with existing financial instruments. We outline a few here for readers familiar with finance, but the rest of this section can otherwise be skipped. Repurchase agreements also over-collateralize to insure against a decrease in the collateralized asset's value. If the contracts are sold, the value depends on the future exchange rate and thus are effectively an ETH-settled derivative, but not of a standard type. Another way to think about the stablecoin and underlying contract is as a single asset with two tranches: the first tranche is held by the buyer of the stablecoin and gets paid first until \$1 USD is reached, then the rest of the deposit spills into the second tranche (held by the underwriter of the contract). 
 
@@ -344,7 +342,7 @@ We have considered various issues with different mechanisms of designing a stabl
 
 A number of stablecoin proposals feature oracles which feed information about the stablecoin's exchange rate onto the blockchain. This is essential for indirectly-backed stablecoins, and incidental to intervention-based coins. This raises an important design question. A stablecoin exists so that a digital (or material) good or service can be effectively priced in, say, USD instead of in ETH. To be clear, it is priced in the stablecoin, which maintains a stable exchange rate with USD. To accomplish this, an oracle provides a reliable exchange rate and somewhat elaborates contracts issue stablecoins with an unusual risk profile (\eg full redemption might not be possible under certain market conditions) that could be difficult for non-experts to understand.
 
-Let us take a step back and think about the larger picture. If we have trustworthy oracles providing reliable exchange rates, is it not a simpler design to just have transacting parties use the oracle directly? Anyone wanting to do business in a stable currency can determine at transaction time how much their good or service, priced in USD, is in ETH and charge the correct amount in ETH (which can then be immediately liquidated for USD, if desired). In summary, the oracle assumption that underlies many stablecoins is itself sufficient to side-step the need for stablecoins. This is applicable to lending as well: loans, interest rates, and repayment amounts can be denominated in USD but paid in ETH using a spot conversion via an oracle.
+Let us take a step back and think about the larger picture. If we have trustworthy oracles providing reliable exchange rates, is it not a simpler design to just have transacting parties use the oracle directly? Anyone wanting to do business in a stable currency can determine at transaction time how much their good or service, priced in USD, is in ETH and charge the correct amount in ETH (which can then be immediately liquidated for USD, if desired). In summary, the oracle assumption that underlies many stablecoins is itself sufficient to side-step the need for stablecoins. This is applicable to lending as well: loans, interest rates, and repayment amounts can be denominated in USD but paid in ETH using a spot conversion via an oracle (\eg as proposed in~\cite{okoyetoward}).
 
 %========================%
 
@@ -394,7 +392,7 @@ DApps on Ethereum execute arbitrary code provided by the owner of the DApp. Whil
 
 Gas was envisioned as maintaining a relatively stable value where a particular function should cost the same amount (say in USD) over time, even as the price of ETH changes dramatically (as seen in Figure~\ref{fig:eth}). We first investigate how successful gas has been with the charts in Figure~\ref{fig:gas}, which show the monthly average gas price variations with respect to USD and ETH in the first chart; and electricity and USD in the other. Electricity data is from a Canada-based average index which does not necessarily reflect the costs of mining on a global blockchain, like Ethereum, but if gas were correlated to electricity generally, it should be evident from a representative energy index. Gas demonstrates diagonal movements along the 2/6 direction meaning that it actually moves independently of ETH, USD and electricity. There is no strong evidence of stability. This could be due to a few factors. First, the graph is dominated by one large spike and one moderate spike which correspond to (i) when the popular Ethereum game Cryptokitties \footnote{Cryptokitties website \url{https://www.cryptokitties.co/}} was first launched (January 2018) and, (ii) when the China-based crypto exchange FCOIN \footnote{Fcoin website \url{https://www.fcoin.com}} was launched (July 2018) and required a lot of on-chain voting. Both these events  clogged up the Ethereum network and increased the gas price as users had to pay more gas for their transactions to go through. Second, it is probably true that users do not have a strong mental model of how much gas to stake for a computation and rely heavily on the user interface for prompts about gas.
 
-Although gas might become a stable unit of account, it is not a store of value because it cannot be held or transacted. However gas could be used to back a stablecoin, much like the coins in the directly-backed category. Amazingly, such a gas-backed coin could even be made redeemable.Ethereum is designed in such a way that it allows users to create a smart contract which stockpiles and swaps gas with other tokens. Operations that store data on Ethereum blockchain modify its global state hence they are very expensive. So in order to incentivize users to free up space on the blockchain, Ethereum refunds the amount of gas users paid if they delete their smart contracts or stored data~\cite{wood2014ethereum}. GasToken is a directly-backed and redeemable tokenization of gas.\footnote{https://github.com/projectchicago/gastoken} When the gas price is low (\eg 1 Gwei), users can store some data on the GasToken contract and create GasTokens. Later when the gas price increases (\eg 50 Gwei), users can redeem their GasTokens. However they do not receive ETH back; rather, they use the tokens to pay the transaction fees for other computations. 
+Although gas might become a stable unit of account, it is not a store of value because it cannot be held or transacted. However gas could be used to back a stablecoin, much like the coins in the directly-backed category. Amazingly, such a gas-backed coin could even be made redeemable. Ethereum is designed in such a way that it allows users to create a smart contract which stockpiles and swaps gas with other tokens. Operations that store data on Ethereum blockchain modify its global state hence they are very expensive. So in order to incentivize users to free up space on the blockchain, Ethereum refunds the amount of gas users paid if they delete their smart contracts or stored data~\cite{wood2014ethereum}. GasToken is a directly-backed and redeemable tokenization of gas.\footnote{https://github.com/projectchicago/gastoken} When the gas price is low (\eg 1 Gwei), users can store some data on the GasToken contract and create GasTokens. Later when the gas price increases (\eg 50 Gwei), users can redeem their GasTokens. However they do not receive ETH back; rather, they use the tokens to pay the transaction fees for other computations. 
 
 As users' mental model of gas improves over time, the volatility of gas has the potential to reduce. Gas-backed tokens represent a new class of stablecoin that float in value without any direct ties to USD, references to exchange rates, or explicit intervention mechanisms. It is an interesting subject worthy of further research. 
 
